# dummy2

./: README.md
3d-model/: README.md  base.stl  cover1.stl  cover2.stl  cover3.stl  link1.stl  link23.stl  link4.stl  link5.stl  link6.stl
dummy2-gui/: README.md  UDPClient.py  main.py
dummy2-gui/rboot-gui/: can_data.py  controls.py  main.py  test.py  udpclient.py
dummy2-gui/src/: controls.py  main.py
eth2can/: README.md
eth2can/firmware/: C2E-fw.hex
matlab/: README.md  dummy2.m
rdrive/: README.md
rdrive/firmware/: README.md
rdrive/firmware/firmware/: dummy2_fw-v1.01.hex
rdrive/firmware/source/: tup.config
rdrive/firmware/source/MotorControl/: main.cpp
rdrive/firmware/source/communication/can/: odrive_can.cpp
ros2/: README.md
ros2/dummy2_ws/src/dummy2_description/: package.xml  setup.cfg  setup.py
ros2/dummy2_ws/src/dummy2_description/launch/: display.launch.py  gazebo.launch.py
ros2/dummy2_ws/src/dummy2_description/meshes/: J1_1.stl  J3_1.stl  J4_1.stl  J5_1.stl  J6_1.stl  base_link.stl
ros2/dummy2_ws/src/dummy2_description/urdf/: dummy2.gazebo  dummy2.trans  dummy2.xacro  materials.xacro
ros2/dummy2_ws/src/dummy2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2/dummy2_ws/src/dummy2_moveit_config/config/: dummy2.ros2_control.xacro  dummy2.srdf  dummy2.urdf.xacro  dummy2_simulated_config.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
ros2/dummy2_ws/src/dummy2_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo_cpp_interface_demo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2/dummy2_ws/src/dummy2_moveit_config/src/: dummy2_pose_sets.cpp  dummy2_pose_sets.py  servo_cpp_interface_demo.cpp  servo_keyboard_input.cpp
ros2/rboot_ws/src/hello_moveit/: package.xml
ros2/rboot_ws/src/hello_moveit/src/: hello_moveit.cpp
ros2/rboot_ws/src/rboot_interface/: CMakeLists.txt  package.xml
ros2/rboot_ws/src/rboot_interface/msg/: RbootPosition.msg
ros2/rboot_ws/src/rboot_launch/: package.xml  setup.cfg  setup.py
ros2/rboot_ws/src/rboot_launch/launch/: rboot.launch.py
ros2/rboot_ws/src/rboot_libs/: package.xml  setup.cfg  setup.py
ros2/rboot_ws/src/rboot_libs/rboot_libs/: rbootlibs.py
ros2/rboot_ws/src/rboot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2/rboot_ws/src/rboot_moveit_config/config/: initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  (+4 more)
ros2/rboot_ws/src/rboot_rviz2/: package.xml  setup.cfg  setup.py
ros2/rboot_ws/src/rboot_topic/: package.xml  setup.cfg  setup.py
(+17 files in other folders)
